--- a/1-Java基础/1-00【Java基础1】.md
+++ b/1-Java基础/1-00【Java基础1】.md
@@ -301,6 +301,24 @@ public static void main(String[] args){
 
  `s += 1` 逻辑上看作是 `s = s + 1` 计算结果被提升为int类型，再向short类型赋值时发生错误，因为不能将取值范围大的类型赋值到取值范围小的类型。但是， `s=s+1`进行两次运算 ， `+=` 是一个运算符，只运算一次，并带有强制转换的特点，也就是说 `s += 1` 就是 `s = (short)(s + 1)` ，因此程序没有问题编译通过，运行结果是2。
 
+其他运算符：
+
+* `instanceof` 是java的保留关键字。他的作用就是测试左边的对象是不是右边类的实例，是的话就返回true，不是的话返回false。是一个对象运算符。
+
+  也就是说，比如一个表达式：`boolean b = object instanceof class`。左边是对象，右边是类，结果是boolean。
+
+  类的实例包括本身的实例，以及所有直接或间接子类的实例
+
+  - `instanceof`左边显式声明的类型与右边操作元必须是同种类或存在继承关系，也就是说需要位于同一个继承树，否则会编译错误。
+  - 左边的对象实例不能是基础数据类型（也就是八种基本数据类型，String 可以）。
+  - `null`用`instanceof`跟任何类型比较，是返回false，而不是编译错误。
+
+* 三元运算符：表达式1 ? 表达式2 : 表达式3
+
+  计算表达式1的值，要么为true、要么为false
+  如果表达式1计算结果为true，就选择表达式2作为三元表达式的计算结果
+  如果表达式1计算结果为false，就选择表达式3作为三元表达式的计算结果
+
 ## 2.3 方法入门
 
 方法：就是将一个功能抽取出来，把代码单独定义在一个大括号内，形成一个单独的功能。
@@ -1070,7 +1088,7 @@ public class ClassName{
 
 ### 4.3.5 Lombok
 
-**Lombok，一个Java类库，提供了一组注解，简化POJO实体类开发。**
+Lombok，一个Java类库，提供了一组注解，简化POJO实体类开发。
 
 使用步骤如下：
 
