--- a/1-Java基础/1-05【并发-多线程】.md
+++ b/1-Java基础/1-05【并发-多线程】.md
@@ -67,7 +67,7 @@
 - 进程基本上相互独立的，而线程存在于进程内，是进程的一个子集
 - 进程拥有共享的资源，如内存空间等，供其内部的线程共享
 - 进程间通信较为复杂
-  - 同一台计算机的进程通信称为 IPC（Inter-process communication）
+  - 同一台计算机的进程通信称为 `IPC`（`Inter-process communication`）
   - 不同计算机之间的进程通信，需要通过网络，并遵守共同的协议，例如 HTTP
 - 线程通信相对简单，因为它们共享进程内的内存，一个例子是多个线程可以访问同一个共享变量
 - 线程更轻量，线程上下文切换成本一般上要比进程上下文切换低。进程切换涉及内存空间的切换而线程不会。因为每个进程都有自己的内存空间，而线程是共享所在进程的内存空间的，因此同一个进程中的线程进行线程切换时不涉及内存空间的转换。所以线程上下文切换成本低。
@@ -426,7 +426,7 @@ public class Sleeper {
 **yield**
 
 1. 调用 yield 会让当前线程从 `Running` 进入 `Runnable` 就绪状态，然后调度执行其它线程。`Runnable` 就绪状态不同于 `Timed Waiting` 阻塞状态，`Runnable`就绪状态有可能分配时间片，而`Timed Waiting`阻塞状态在阻塞期间内不会分配时间片。
-2. 具体的实现依赖于操作系统的任务调度器，就是可能没有其它的线程正在执行，虽然调用了yield方法，但是没有任何卵用，依然执行该线程。
+2. 具体的实现依赖于操作系统的任务调度器，就是可能没有其它的线程正在执行，虽然调用了`yield`方法，但是没有任何卵用，依然执行该线程。
 
 **线程优先级**
 
