--- a/1-Java基础/1-06【并发-管程1】.md
+++ b/1-Java基础/1-06【并发-管程1】.md
@@ -1590,6 +1590,8 @@ Maven工程导入可以打印Mark Word的依赖：
 
 有三种情况会撤销偏向锁：对象调用hashcode方法、其他线程使用对象、wait/notify。接下来介绍一下。
 
+> 撤销偏向需要将持锁线程升级为轻量级锁，这个过程中所有线程需要暂停（STW）
+
 **hashcode方法**
 
 * 测试 `hashCode`：当调用对象的hashcode方法的时候就会撤销这个对象的偏向锁，因为使用偏向锁时没有位置存`hashcode`的值了
@@ -1893,6 +1895,20 @@ c.i.MyBenchmark.b avgt 5 16.976 1.572 ns/op
 - 开启锁消除：`-XX:+EliminateLocks`
 - 关闭锁消除：`-XX:-EliminateLocks`
 
-锁消除在 JDK8 中都是默认开启的，并且锁消除都要建立在逃逸分析的基础上
+锁消除在 JDK8 中都是默认开启的，并且锁消除都要建立在逃逸分析的基础上。
+
+### 3.6.6 锁粗化
 
 锁粗化：对相同对象多次加锁，导致线程发生多次重入，可以使用锁粗化方式来优化，这不同于之前讲的细分锁的粒度。
+
+多次循环进入同步块不如同步块内多次循环
+
+另外 JVM 可能会做如下优化，把多次 append 的加锁操作粗化为一次（因为都是对同一个对象加锁，没必要重入多次）
+
+```java
+new StringBuffer().append("a").append("b").append("c");		// 锁重入
+```
+
+```java
+new StringBuffer().append("abc");						// 优化
+```
