--- a/1-Java基础/1-14【反射、注解】.md
+++ b/1-Java基础/1-14【反射、注解】.md
@@ -542,15 +542,9 @@ public class Demo06ReflectTest {
 
 ## 2.1 注解
 
-从JDK5开始,Java增加对元数据的支持，也就是注解，注解与注释是有一定区别的，可以把注解理解为代码里的特殊标记，这些标记可以在编译，类加载，运行时被读取，并执行相应的处理。
+从JDK5开始，Java增加对元数据的支持，也就是注解，注解与注释是有一定区别的，可以把注解理解为代码里的特殊标记，这些标记可以在编译，类加载，运行时被读取，并执行相应的处理。
 
-通过注解开发人员可以在不改变原有代码和逻辑的情况下在源代码中嵌入补充信息。
-
-概念描述
-
-* JDK1.5之后的新特性
-* 说明程序
-* 使用注解：`@ + 注解名称`
+通过注解开发人员可以在不改变原有代码和逻辑的情况下在源代码中嵌入补充信息。使用注解：`@ + 注解名称`
 
 作用分类：
 
@@ -558,17 +552,14 @@ public class Demo06ReflectTest {
 2. 代码分析：通过代码里面标识的注解对代码进行分析【使用反射】
 3. 编译检查：通过代码里面标识的注解让编译器能够实现基本的编译检查【`@Override`】
 
-## 2.2 JDK中预定义的一些注解
+## 2.2 JDK注解
 
 * `@Override`：检查被该注解标注的方法是否是继承自父类/接口的
 
-* `@Deprecated`：该注解标注的内容，标识已经过时
+* `@Deprecated`：该注解标注的内容，标识已经过时。虽然已经过时，但是仍然可以使用，就是被划上了横线
 
-  虽然已经过时，但是仍然可以使用，就是被划上了横线
+* `@SuppressWarnings`：压制警告。需要传递参数，一般传递all。`@suppressWarnings("all")`
 
-* `@SuppressWarnings`：压制警告
-
-  需要传递参数，一般传递all		`@suppressWarnings("all")`
 
 ```java
 @SuppressWarnings("all")
@@ -598,32 +589,18 @@ public class Demo01Annotation {
 
 ## 2.3 自定义注解
 
-格式如下：
+自定义注解格式如下：
 
 ```java
 元注解
 public @interface 注解名称{}
 ```
 
-本质
-
-**注解本质上就是一个接口，该接口默认继承Annotation接口**
-
-```java
-publi interface 接口名称 extends java.lang.annotation.Annotation{}
-```
-
-属性
+注解本质上就是一个接口，该接口默认继承Annotation接口。`publi interface 接口名称 extends java.lang.annotation.Annotation{}`
 
 属性：接口中定义的成员方法
 
-**属性的返回值类型要求有下列取值，其他的类型都不可以：**
-
-* 基本数据类型
-* String
-* 枚举
-* 注解
-* 以上类型的数组
+属性的返回值类型要求有下列取值，其他的类型都不可以：基本数据类型、String、枚举、注解、以上类型的数组。
 
 ```java
 // 创建一个枚举类，为了测试注解中的参数可以是枚举
@@ -658,7 +635,7 @@ public @interface MyAnnotation {
 }
 ```
 
-**为属性赋值：**
+为属性赋值：
 
 * int类型赋值。
 
@@ -671,7 +648,7 @@ public @interface MyAnnotation {
   }
   ```
 
-* 如果定义属性的时候，使用default关键字给属性默认初始化值，则使用注解的时候可以不进行赋值。
+* 如果定义属性的时候，使用`default`关键字给属性默认初始化值，则使用注解的时候可以不进行赋值。
 
   ```java
   // 对于name不用赋值，已经提前赋值了
@@ -689,7 +666,7 @@ public @interface MyAnnotation {
   }
   ```
 
-* 如果只有一个属性需要赋值，并且属性的名称是value，那么value可以省略，直接定义值就可以了。
+* 如果只有一个属性需要赋值，并且属性的名称是`value`，那么`value`可以省略，直接定义值就可以了。
 
   ```java
   @MyAnnotation(2)
@@ -720,7 +697,20 @@ public @interface MyAnnotation {
   }
   ```
 
-* 数组赋值的时候，值使用{}包裹。如果数组中只有一个值，那么{}省略。
+  ```java
+  // 创建一个注解，测试注解中属性的参数可以是注解
+  public @interface MyAnnotation2 {
+  }
+  ```
+
+  ```java
+  // 创建一个枚举类，为了测试注解中的参数可以是枚举
+  public enum Person {
+      p1, p2;
+  }
+  ```
+
+* 数组赋值的时候，值使用`{}`包裹。如果数组中只有一个值，那么`{}`省略。
 
   ```java
   @MyAnnotation(strs = "bbb")
@@ -736,54 +726,55 @@ public @interface MyAnnotation {
 
 ## 3.4 元注解
 
-元注解：用于描述注解的注解
+元注解：用于描述注解的注解。常见的元注解有：`@Target`、`@Retention`、`@Documented`、`@Inherited`。
 
-* `@Target`：描述注解能够作用的位置
+`@Target`：描述注解能够作用的位置。值是一个枚举类型`ElementType`，`ElementType`取值如下：
 
-  ElementType取值：
+* `TYPE`：可以作用于类上面
+* `METHOD`：可以作用于方法上面
+* `FILED`：可以作用于成员变量上面
 
-  * `TYPE`：可以作用于类上面
-  * `METHOD`：可以作用于方法上面
-  * `FILED`：可以作用于成员变量上面
+```java
+@Annotation
+public class Person {
+    // @Annotation
+    // 不能在这里注解，会报错
+    public void show() {
+        
+    }
+}
+```
 
-  ```java
-  @Annotation
-  public class Person {
-      // @Annotation
-      // 不能在这里注解，会报错
-      public void show() {
-          
-      }
-  }
-  ```
+```java
+// 定义自己的注解
+// 表示该注解只能用于类上面
+@Target(value = {ElementType.TYPE})
+public @interface Annotation {
+}
+```
 
-  ```java
-  import java.lang.annotation.ElementType;
-  import java.lang.annotation.Target;
-  // 定义自己的注解
-  // 表示该注解只能用于类上面
-  @Target(value = {ElementType.TYPE})
-  public @interface Annotation {
-  }
-  ```
+`@Retention`：描述注解被保留的阶段
 
-* `@Retention`：描述注解被保留的阶段
+* `@Retention(RetentionPolicy.SOURCE)`：注解只保留在源文件，当Java文件编译成class文件的时候，注解被遗弃；
+* `@Retention(RetentionPolicy.CLASS)`：注解被保留到class文件，但jvm加载class文件时候被遗弃，这是默认的生命周期；
+* `@Retention(RetentionPolicy.RUNTIME)`：注解不仅被保存到class文件中，jvm加载class文件之后，仍然存在；
+* 这3个生命周期分别对应于：Java源文件(.java文件) ---> .class文件 ---> 内存中的字节码。
+* 首先要明确生命周期长度  `RUNTIME` > `CLASS`>`SOURCE` ，所以前者能作用的地方后者一定也能作用。
+  一般如果需要在运行时去动态获取注解信息，那只能用 `RUNTIME` 注解，比如`@Deprecated`使用`RUNTIME`注解。
+  如果要在编译时进行一些预处理操作，比如生成一些辅助代码（如 `ButterKnife`），就用 `CLASS`注解。
+  如果只是做一些检查性的操作，比如 `@Override` 和 `@SuppressWarnings`，使用`SOURCE` 注解。
 
-  * `@Retention(RetentionPolicy.RUNTIME)`：当前被描述的注解，会保留到class字节码文件中，并被JVM读取到。
+`@Documented`：描述注解是否被抽取到api文档中
 
-* `@Documented`：描述注解是否被抽取到api文档中
+`@Inherited`：描述注解是否被子类继承
 
-* `@Inherited`：描述注解是否被子类继承
+## 3.5 程序中使用注解
 
-## 3.5 在程序中使用（解析）注解
+注解可以用来替换配置文件。
 
-注解可以用来替换配置文件
-
-### 重写“框架案例”
+**重写框架案例**
 
 写一个“框架”， 在不改变该类的任何代码的前提下，改动注解，帮助我们创建任意类的对象，并且执行其中任意的方法
-
-**Person类：**
 
 ```java
 package cn.com.demo04.annotation;
@@ -797,14 +788,7 @@ public class Person {
 }
 ```
 
-**创建注解：**
-
 ```java
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-
 @Target({ElementType.TYPE})
 @Retention(RetentionPolicy.RUNTIME)
 // 创建一个我们自己的注解
@@ -814,12 +798,7 @@ public @interface MyAnnotation {
 }
 ```
 
-**解析注解，创建对象，调用方法**
-
 ```java
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-
 // 解析注解，创建对象，调用方法
 @MyAnnotation(className = "cn.com.demo04.annotation.Person", methodName = "show")
 public class AnnotationTest {
@@ -846,81 +825,19 @@ public class AnnotationTest {
         Method method = cls.getMethod(methodName);
         // 执行方法
         method.invoke(obj);
-
     }
 }
 ```
 
-### 体现注解好处案例
-
-**创建自己的注解**
+**体现注解好处案例**
 
 ```java
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-
 // 创建自己注解，MyCheck
 @Target({ElementType.METHOD})
 @Retention(RetentionPolicy.RUNTIME)
 public @interface MyCheck {
 }
 ```
-
-**定义注解的操作**
-
-```java
-import java.io.BufferedWriter;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-
-public class TestMyCheck {
-    public static void main(String[] args) throws IOException {
-        // 创建计算器对象
-        Calculator calculator = new Calculator();
-        // 获取字节码文件对象
-        Class cls = calculator.getClass();
-        // 获取所有的方法
-        Method[] methods = cls.getMethods();
-
-        int count = 0;
-        BufferedWriter bw = new BufferedWriter(new FileWriter("bug.txt"));
-
-        for (Method method : methods) {
-            // 判断方法上面是否有Check注解
-            if (method.isAnnotationPresent(MyCheck.class)) {
-                // 有就执行
-                try {
-                    method.invoke(calculator);
-                } catch (Exception e) {
-                    // 捕获异常
-
-                    // 记录到文件中去
-                    count++;
-
-                    bw.write(method.getName() + "方法出异常了");
-                    bw.newLine();
-                    bw.write("异常的名称：" + e.getCause().getClass().getSimpleName());
-                    bw.newLine();
-                    bw.write("异常的原因：" + e.getCause().getMessage());
-                    bw.newLine();
-                    bw.write("=============================");
-                    bw.newLine();
-                }
-            }
-        }
-
-        bw.write("本次操作共有 " + count + " 个异常");
-        bw.flush();
-        bw.close();
-    }
-}
-```
-
-**创建计算器类来使用注解**
 
 ```java
 // 计算器类
@@ -952,8 +869,44 @@ public class Calculator {
 }
 ```
 
-## 3.5 小结
+```java
+public class TestMyCheck {
+    public static void main(String[] args) throws IOException {
+        // 创建计算器对象
+        Calculator calculator = new Calculator();
+        // 获取字节码文件对象
+        Class cls = calculator.getClass();
+        // 获取所有的方法
+        Method[] methods = cls.getMethods();
 
-1. 以后大多数使用注解，而不是自定义注解。
-2. 注解给编译器和解析程序使用
-3. 注解不是程序的一部分，注解只是一个标签
+        int count = 0;
+        BufferedWriter bw = new BufferedWriter(new FileWriter("bug.txt"));
+
+        for (Method method : methods) {
+            // 判断方法上面是否有Check注解
+            if (method.isAnnotationPresent(MyCheck.class)) {
+                // 有就执行
+                try {
+                    method.invoke(calculator);
+                } catch (Exception e) {
+                    // 记录到文件中去
+                    count++;
+
+                    bw.write(method.getName() + "方法出异常了");
+                    bw.newLine();
+                    bw.write("异常的名称：" + e.getCause().getClass().getSimpleName());
+                    bw.newLine();
+                    bw.write("异常的原因：" + e.getCause().getMessage());
+                    bw.newLine();
+                    bw.write("=============================");
+                    bw.newLine();
+                }
+            }
+        }
+        bw.write("本次操作共有 " + count + " 个异常");
+        bw.flush();
+        bw.close();
+    }
+}
+```
+
