--- a/1-Java基础/1-15【版本特性1.5】.md
+++ b/1-Java基础/1-15【版本特性1.5】.md
@@ -1,23 +1,14 @@
-# 图片
-
 ![](D:\Java\笔记\图片\Java版本\5-10.png)
 
-# jdk1.5的新特性
+# 第一章 自动装箱/拆箱
 
-## 1. 自动装箱/拆箱
-
-装箱就是自动将基本数据类型转换为包装器类型；拆箱就是自动将包装器类型转换为基本数据类型。
+由于我们经常要做基本类型与包装类之间的转换，从Java 5（JDK 1.5）开始，基本类型与包装类的装箱、拆箱动作可以自动完成。例如：
 
 ```java
-Integer i = 10; //装箱
-int n = i;  //拆箱
+Integer i = 4; // 自动装箱。相当于Integer i = Integer.valueOf(4);
+i = i + 5; // 等号右边：将i对象转成基本数值(自动拆箱) i.intValue() + 5;
+// 加法运算完成后，再次装箱，把基本数值转成对象。
 ```
-
-![img](D:\Java\笔记\图片\Java版本\自动拆箱)
-
-在Java中每种基本数据类型都会存在对应的包装器类型，为什么这么设计？
-
-Java是一个面相对象的编程语言，基本类型并不具有对象的性质，为了让基本类型也具有对象的特征，就出现了包装类型（如我们在使用集合类型Collection时就一定要使用包装类型而非基本类型），它相当于将基本类型“包装起来”，使得它具有了对象的性质，并且为其添加了属性和方法，丰富了基本类型的操作。
 
 看一下下面的题目：
 
@@ -36,57 +27,48 @@ public class Main {
 }
 ```
 
-为什么会这样呢？看下Integer的valueOf方法的具体实现：
+为什么会这样呢？看下`Integer`的`valueOf`方法的具体实现：
 
 ```java
 public static Integer valueOf(int i) {
-	final int offset = 128;
-	if (i >= -128 && i <= 127) { // must cache 
-	    return IntegerCache.cache[i + offset];
-	}
-        return new Integer(i);
+    final int offset = 128;
+    if (i >= -128 && i <= 127) { // must cache 
+        return IntegerCache.cache[i + offset];
     }
+    return new Integer(i);
+}
 ```
 
 而其中`IntegerCache`类的实现为：
 
 ```java
+// 省略了很多
 private static class IntegerCache {
     private IntegerCache(){}
-    static final Integer cache[] = new Integer[-(-128) + 127 + 1];
- 
+    static final Integer cache[] = new Integer[127 - (-128) + 1];
+
     static {
         for(int i = 0; i < cache.length; i++)
-	    cache[i] = new Integer(i - 128);
+            cache[i] = new Integer(i - 128);
     }
 }
 ```
 
-由上可知，Integer包装类型如果数值在[-128,127]之间，便返回指向IntegerCache.cache中已经存在的对象的引用；否则创建一个新的Integer对象。
+由上可知，Integer包装类型如果数值在`[-128,127]`之间，便返回指向`IntegerCache.cache`中已经存在的对象的引用；否则创建一个新的Integer对象。
 
-我们会联想到其他的包装类类型是否也有这样的规律，看下Double的valueof方法的实现：
+`Integer`、`Short`、`Byte`、`Character`、`Long`这几个类的`valueOf`方法的实现是类似的，而`Double`、`Float`的`valueOf`方法的实现就和他们不一样了，这是因为他们都是浮点数，根本无法确定值。
 
-```java
-public static Double valueOf(double d) {
-        return new Double(d);
-}
-```
-
-想想原因很简单：在某个范围内的整型数值的个数是有限的，而浮点数却不是。
-
-注意，Integer、Short、Byte、Character、Long这几个类的valueOf方法的实现是类似的。Double、Float的valueOf方法的实现是类似的。
-
-对于Boolean类型比较一下就一目了然：
+对于`Boolean`类型比较一下就一目了然：
 
 ```java
 public class Main {
     public static void main(String[] args) {
-         
+
         Boolean i1 = false;
         Boolean i2 = false;
         Boolean i3 = true;
         Boolean i4 = true;
-         
+
         System.out.println(i1==i2);    //true
         System.out.println(i3==i4);    //true
     }
@@ -97,19 +79,16 @@ public class Main {
 
 ```java
 public static Boolean valueOf(boolean b) {
-        return (b ? TRUE : FALSE);
-    }
-```
+    return (b ? TRUE : FALSE);
+}
 
-TRUE和FALSE都是静态常量
-
-```java
 public static final Boolean TRUE = new Boolean(true);
- 
 public static final Boolean FALSE = new Boolean(false);
 ```
 
-另外还有一点需要注意：当 "=="运算符的两个操作数都是包装器类型的引用，则是比较指向的是否是同一个对象，而如果其中有一个操作数是表达式（即包含算术运算）则比较的是数值（即会触发自动拆箱的过程），对基础数据类型进行运算。对于包装器类型，equals方法并不会进行类型转换。
+另外还有一点需要注意：当 `"=="`运算符的两个操作数都是包装器类型的引用，则是比较指向的是否是同一个对象，而如果其中有一个操作数是表达式（即包含算术运算）则比较的是数值（即会触发自动拆箱的过程），对基础数据类型进行运算。
+
+对于包装器类型，equals方法并不会进行类型转换。
 
 ```java
 public class Main {
@@ -135,7 +114,7 @@ public class Main {
 }
 ```
 
-equals()方法源码
+`equals()`方法源码
 
 ```java
 //Integer类中
@@ -157,45 +136,13 @@ public boolean equals(Object obj) {
 
 指定equals比较的是内容本身，并且我们也可以看到equals的参数是一个Object对象，我们传入的是一个int类型，所以首先会进行装箱，然后比较，之所以返回true，是由于它比较的是对象里面的value值。当内容和类型都相同时才会返回true。
 
-## 2. 枚举
+# 第二章 枚举
 
 问题：要定义星期几或性别的变量，该怎么定义？
-假设用1-7分别表示星期一到星期日，但有人可能会写成`int weekday = 0;`或即使使用常量方式也无法阻止意外。
+
+假设用1-7分别表示星期一到星期日，但有人可能会写成`int weekday = 0;`，这样根本不行，因为没有星期0的存在。所以这时候就可以使用枚举！
 
 枚举就是要让某个类型的变量的取值只能为若干个固定值中的一个，否则，编译器就会报错。枚举可以让编译器在编译时就可以控制源程序中填写的非法值，普通变量的方式在开发阶段无法实现这一目标。
-
-```java
-/*
- * 用普通类如何实现枚举功能，定义一个Weekday的类来模拟枚举功能。 
-	1、私有的构造方法
-	2、每个元素分别用一个公有的静态成员变量表示
-	3、可以有若干公有方法或抽象方法。采用抽象方法定义nextDay就将大量的if.else语句转移成了一个个独立的类。
-*/
- 
-package cn.itheima;
- 
-public abstract class WeekDay {
-	private WeekDay(){}
- 
-	public final static WeekDay SUN=new WeekDay(){
-		public WeekDay nextDay(){
-			return MON;
-		}
-	};
-	
-	public final static WeekDay MON=new WeekDay(){
-		public WeekDay nextDay(){
-			return SUN;
-		}
-	};
-	
-	public abstract WeekDay nextDay();
- 
-	public String toString(){
-		return this==SUN?"SUM":"MON";
-	}
-}
-```
 
 ### 枚举的基本应用
 
@@ -214,90 +161,115 @@ public abstract class WeekDay {
 
      1. 构造器只是在构造枚举值的时候被调用。
 
-     2. 构造器只有私有private，绝不允许有public构造器。这样可以保证外部代码无法重新构造枚举类的实例。因为枚举值是public static final的常量，但是枚举类的方法和数据域是可以被外部访问的。
+     2. 构造器只有私有`private`，绝不允许有`public`构造器。这样可以保证外部代码无法重新构造枚举类的实例。因为枚举值是`public static final`的常量，但是枚举类的方法和数据域是可以被外部访问的。
 
      3. 构造器可以有多个，调用哪个即初始化相应的值。
 
-        
-
    * 非静态方法：（所有的枚举类都继承了Enum方法）
 
-     1. `String toString()` ;//返回枚举量的名称
+     1. `String toString()`：返回枚举量的名称
 
-     2. `int ordinal()` ;//返回枚举值在枚举类中的顺序，按定义的顺序排，默认第一个是0
+     2. `int ordinal()`：返回枚举值在枚举类中的顺序，按定义的顺序排，默认第一个是0
 
-     3. `Class getClass()` ;//获取对应的类名
+     3. `Class getClass()`：获取对应的类名
 
-     4. `String name()`;//返回此枚举常量的名称，在其枚举声明中对其进行声明。
-
-        
+     4. `String name()`：返回此枚举常量的名称，在其枚举声明中对其进行声明。
 
    * 静态方法：
 
-     1. `valueOf(String e)` ;//转为对应的枚举对象，即将字符串转为对象
+     1. `valueOf(String e)`：转为对应的枚举对象，即将字符串转为对象
 
-     2. `values()` ;//获取所有的枚举对象元素
+     2. `values()`：获取所有的枚举对象元素
 
-   ```java
-   package cn.itheima;
-    
-   public class EnumDemo {
-   public static void main(String[] args) {
-   		WeekDay weekDay=WeekDay.MON;
-   		System.out.println(weekDay);//输出枚举常量名
-   		System.out.println("=====================1");
-   		System.out.println(weekDay.name());//输出对象名
-   		System.out.println("=====================2");
-   		System.out.println(weekDay.getClass());//输出对应类
-   		System.out.println("=====================3");
-   		System.out.println(weekDay.toString());//输出枚举对象名
-   		System.out.println("=====================4");
-   		System.out.println(weekDay.ordinal());//输出此对象在枚举常量的次序
-   		System.out.println("=====================5");
-   		System.out.println(WeekDay.valueOf("WED"));//将字符串转化为枚举常量
-   		System.out.println("=====================6");
-   		System.out.println(WeekDay.values().length);//获取所以的枚举元素，并打印其长度
-   	}
-   	//定义枚举内部类
-   	public enum WeekDay{
-   		SUN(1),MON,TUE,WED,THI,FRI,SAT;
-   		//分号可有可无，但如果下面还有方法或其他成员时，分号不能省。
-   		//而且当有其他方法时，必须在这些枚举变量的下方。
-    
-   		//无参构造器
-   		private WeekDay(){
-   			System.out.println("First");
-   		}
-   		//带参数的构造器
-   		private WeekDay(int day){
-   			System.out.println("Second");
-   		}
-   	}
-   }
-   
-   /*
-   	Second
-   	First
-   	First
-   	First
-   	First
-   	First
-   	First
-   	MON
-   	=====================1
-   	MON
-   	=====================2
-   	class Demo$WeekDay
-   	=====================3
-   	MON
-   	=====================4
-   	1
-   	=====================5
-   	WED
-   	=====================6
-   	7
-   */
-   ```
+
+```java
+/*
+ * 用普通类如何实现枚举功能，定义一个Weekday的类来模拟枚举功能。 
+	1、私有的构造方法
+	2、每个元素分别用一个公有的静态成员变量表示
+	3、可以有若干公有方法或抽象方法。采用抽象方法定义nextDay就将大量的if.else语句转移成了一个个独立的类。
+*/
+public abstract class WeekDay {
+	private WeekDay(){}
+ 
+	public final static WeekDay SUN = new WeekDay(){
+		public WeekDay nextDay(){
+			return MON;
+		}
+	};
+	
+	public final static WeekDay MON = new WeekDay(){
+		public WeekDay nextDay(){
+			return SUN;
+		}
+	};
+	
+	public abstract WeekDay nextDay();
+ 
+	public String toString(){
+		return this == SUN ? "SUM" : "MON";
+	}
+}
+```
+
+```java
+public class EnumDemo {
+    public static void main(String[] args) {
+        WeekDay weekDay = WeekDay.MON;
+        System.out.println(weekDay);//输出枚举常量名
+        System.out.println("=====================1");
+        System.out.println(weekDay.name());//输出对象名
+        System.out.println("=====================2");
+        System.out.println(weekDay.getClass());//输出对应类
+        System.out.println("=====================3");
+        System.out.println(weekDay.toString());//输出枚举对象名
+        System.out.println("=====================4");
+        System.out.println(weekDay.ordinal());//输出此对象在枚举常量的次序
+        System.out.println("=====================5");
+        System.out.println(WeekDay.valueOf("WED"));//将字符串转化为枚举常量
+        System.out.println("=====================6");
+        System.out.println(WeekDay.values().length);//获取所以的枚举元素，并打印其长度
+    }
+    //定义枚举内部类
+    public enum WeekDay{
+        SUN(1),MON,TUE,WED,THI,FRI,SAT;
+        //分号可有可无，但如果下面还有方法或其他成员时，分号不能省。
+        //而且当有其他方法时，必须在这些枚举变量的下方。
+
+        //无参构造器
+        private WeekDay(){
+            System.out.println("First");
+        }
+        //带参数的构造器
+        private WeekDay(int day){
+            System.out.println("Second");
+        }
+    }
+}
+
+/*
+	Second
+	First
+	First
+	First
+	First
+	First
+	First
+	MON
+	=====================1
+	MON
+	=====================2
+	class Demo$WeekDay
+	=====================3
+	MON
+	=====================4
+	1
+	=====================5
+	WED
+	=====================6
+	7
+*/
+```
 
 ### 枚举的高级应用
 
@@ -364,7 +336,7 @@ public class EnumTest {
 >
 > * switch语句支持int,char,enum类型，使用枚举，能让我们的代码可读性更强。
 
-## 3. 静态导入
+# 第三章 静态导入
 
 静态导入是JDK1.5中对import语句的增强,语法格式:`import static 包名….类名.方法名`;或者导入类中所有静态成员，此时方法名用`*`代替。
 
@@ -390,7 +362,7 @@ public class Test {
 
 静态导入节省了大量重复代码的击键次数，但同时也牺牲了代码的可阅读性。
 
-## 5. 可变参数
+# 第三章 可变参数
 
 格式如下：
 
@@ -460,7 +432,7 @@ public class Test {
 }
 ```
 
-## 6. 内省
+# 第四章 内省
 
 ### 什么是内省
 
@@ -812,197 +784,192 @@ public class BeanUtilTest {
 
 3. PropertyUtils类和BeanUtils不同在于，运行getProperty、setProperty操作时，没有类型转换，使用属性的原有类型或者包装类。由于age属性的数据类型是int，所以方法PropertyUtils.setProperty(userInfo, "age", "8")会爆出数据类型不匹配，无法将值赋给属性。
 
-## 7. 泛型(Generic)
+# 第五章 泛型
+
+集合中可以存放任意对象，只要把对象存储集合后，那么这时他们都会被提升成Object类型。但是，当我们在取出每一个对象，并且进行相应的操作，这时必须采用类型转换。
+
+~~~java
+public class GenericDemo {
+	public static void main(String[] args) {
+		Collection coll = new ArrayList();
+		coll.add("abc");
+		coll.add("itcast");
+		coll.add(5); // 由于集合没有做任何限定，任何类型都可以给其中存放
+		Iterator it = coll.iterator();
+		while(it.hasNext()){
+			//需要打印每个字符串的长度,就要把迭代出来的对象转成String类型
+			String str = (String) it.next();
+			System.out.println(str.length());
+		}
+	}
+}
+~~~
+
+上述程序在运行时发生了问题**java.lang.ClassCastException**类强制转换异常。这是由于集合中什么类型的元素都可以存储，上述集合中存储了int类型的5，取出的时候强制转为String类型，这样导致取出时会产生异常`ClassCastException`强制转换类异常。
+
+```java
+Exception in thread "main" java.lang.ClassCastException: java.lang.Integer cannot be cast to java.lang.String
+        at com.linxuan.demo01.Demo02.main(Demo02.java:16)
+```
+
+Collection虽然可以存储各种对象，但实际上通常Collection只存储同一类型对象。例如都是存储字符串对象。因此在JDK5之后，新增了**泛型**(**Generic**)语法，在使用API时可以指定类或方法支持泛型，并得到了编译时期的语法检查。
+
+泛型的英文是 generics，generic 的意思是通用，而翻译成中文，泛应该意为广泛，型是类型。所以泛型就是能广泛适用的类型。
+
+但泛型还有一种较为准确的说法就是为了参数化类型，或者说可以将类型当作参数传递给一个类或者是方法。泛型，即“参数化类型”。
+
+**泛型**：可以在类或方法中预支地使用未知的类型。一般在创建对象时，将未知的类型确定具体的类型。当没有指定泛型时，默认类型为Object类型。泛型是数据类型的一部分，我们将类名与泛型合并一起看做数据类型。
+
+泛型的优点如下：
+
+* 将运行时期的`ClassCastException`，转移到了编译时期变成了编译失败。
+* 避免了向下转型，避免了类型强转的麻烦。
+* 优化了程序设计，解决了黄色警告
+
+~~~java
+public class GenericDemo2 {
+	public static void main(String[] args) {
+        Collection<String> list = new ArrayList<String>();
+        list.add("abc");
+        list.add("itcast");
+        // list.add(5);//当集合明确类型后，存放类型不一致就会编译报错
+        // 集合已经明确具体存放的元素类型，那么在使用迭代器的时候，迭代器也同样会知道具体遍历元素类型
+        Iterator<String> it = list.iterator();
+        while(it.hasNext()){
+            String str = it.next();
+            //当使用Iterator<String>控制元素类型后，就不需要强转了。获取到的元素直接就是String类型
+            System.out.println(str.length());
+        }
+	}
+}
+~~~
+
+## 5.1 泛型的定义与使用
+
+泛型可以用来灵活地将数据类型应用到不同的类、方法、接口当中。将数据类型作为参数进行传递。定义格式为：`修饰符 class/method/interface 名称<代表泛型的变量> {  }`
+
+使用泛型就是什么时候确定泛型，要求在创建对象的时候确定泛型。 例如，`ArrayList<String> list = new ArrayList<String>();`
+
+### 5.1.1 泛型类
+
+格式：`public class 类名<泛型类型1,...>`
+
+```java
+// 此处T可以随便写为任意标识，常见的如T、E、K、V等形式的参数常用于表示泛型
+// 在实例化泛型类时，必须指定T的具体类型
+public class Generic<T,R>{     // 一个类上可以定义多种泛型声明
+    // key这个成员变量的类型为T,T的类型由外部指定  
+    private T key;
+
+    public Generic(T key) { // 泛型构造方法形参key的类型也为T，T的类型由外部指定
+        this.key = key;
+    }
+     
+    public T getKey(){ // 泛型方法getKey的返回值类型为T，T的类型由外部指定
+        return key;
+    }
+    public R fun(T p){  // R是返回值类型，T为方法参数类型
+        teturn null;    
+    }
+}
+```
+
+```java
+public class GenericTest{
+    public static void main(String[] args){
+       // 泛型的类型参数只能是类类型（包括自定义类），不能是简单类型
+       // 传入的实参类型需与泛型的类型参数类型相同，即为Integer.
+       Generic<Integer,String> genericInteger = new Generic<Integer,String>(123456);
+       // 传入的实参类型需与泛型的类型参数类型相同，即为String.
+       Generic<String,Integer> genericString = new Generic<String,Integer>("key_vlaue");
+       System.out.println("泛型测试","key is " + genericInteger.getKey());
+       System.out.println("泛型测试","key is " + genericString.getKey());
+    }
+}
+
+/*
+    泛型测试: key is 123456
+    泛型测试: key is key_vlaue
+*/
+```
+
+泛型类的所有实例都具有相同的运行时类，而不管它们的实际类型参数如何。
 
 ```java
 List<String> l1 = new ArrayList<String>();
 List<Integer> l2 = new ArrayList<Integer>();
-		
-System.out.println(l1.getClass() == l2.getClass());
+System.out.println(l1.getClass()== l2.getClass());    //true
 ```
 
-正确答案是 true。
+注意：
 
-上面的代码中涉及到了泛型，而输出的结果缘由是**类型擦除**。先好好说说泛型。
+* 定义的泛型类，要么传入所有的泛型类型实参，要么不传入任何泛型类型实参。
+* 泛型的类型参数只能是类类型，不能是简单类型。
+* 不能对确切的泛型类型使用`instanceof`操作。如下操作是非法的，编译时会报错。`if(ex_num instanceof Generic<Number>){}`
 
-泛型的英文是 generics，generic 的意思是通用,而翻译成中文，泛应该意为广泛，型是类型。所以泛型就是能广泛适用的类型。
+### 5.1.2 泛型方法
 
-**但泛型还有一种较为准确的说法就是为了参数化类型，或者说可以将类型当作参数传递给一个类或者是方法。**	
+格式：`修饰符<泛型类型> 返回值类型 方法名(参数列表){}`
 
-​	泛型，即“**参数化类型**”，一提到参数，最熟悉的就是定义方法时有形参，然后调用此方法时传递实参。参数化类型就是将类型由原来的具体的类型参数化，类似于方法中的变量参数，此时类型也定义成参数形式(可以称之为类型形参)，然后在使用或调用时传入具体的类型(类型实参)。
-
-​		泛型的本质是为了参数化类型(在不创建新的类型情况下，通过泛型指定的不同类型来控制形参具体限制的类型)。也就是说在泛型使用过程中，操作的数据类型被指定为一个参数，这种参数类型可以用在类、接口和方法中，分别被称之为泛型类、泛型接口、泛型方法。
-
-泛型的好处：
-
-* 将运行期间遇到的问题提前到编译期间
-* 避免了向下转型
-* 优化了程序设计，解决了黄色警告
-
-实例1：
+1. 泛型方法即在方法上设置泛型类型，参数中可以出现泛型类或类中未定义的泛型标识。
+2. 在方法上定义泛型时，这个方法不一定要在泛型类中定义。
+3. 泛型方法中可以出现任意多个泛型标识符。
+4. 静态的泛型方法需要额外的泛型声明，即使使用了泛型类声明过的泛型类型。
+5. 静态方法若有返回值其类型不能为泛型。
 
 ```java
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
+class Generic<T>{
+	private T key;
 
-public class GenericDemo01 {
+	//这只是类中一个普通的成员方法，只不过他的返回值是在声明泛型类已经声明过的泛型。
+	public T getKey(){
+	    return key;
+    }
+    
+	/* 因为在类的声明中并未声明泛型K，所以在使用K做形参和返回值类型时，编译器会无法识别。
+	 * K cannot be resolved to a type
+	 * public K setKey(K key){	
+	    this.key = key;
+	}*/
+    
+	// 在泛型类中声明了一个泛型方法，使用泛型T，这个T是一种全新的类型，可以与泛型类中声明的T不是同一种类型
+	public <T> void show(T t){
+		System.out.println(t);
+	}
+    
+	public <E> T fun(E e){
+		System.out.println(e);
+		return key;
+	}
+    
+	//泛型的数量也可以为任意多个 
+	public <R,V> R showKeyName(R r,V v){
+		return null;
+	} 
+    
+	/*
+	 * 如果在类中定义使用泛型的静态方法，需要添加额外的泛型声明（将这个方法定义成泛型方法）
+	 * 即使静态方法要使用泛型类中已经声明过的泛型也不可以。
+	 * 如：public static void method(T t){...},此时编译器会提示错误信息：
+	 * Cannot make a static reference to the non-static type T
+	 */
+	public static <E> void method(E t){}
+
+}
+```
+
+```java
+public class GenericTest {
 	public static void main(String[] args) {
-		List list = new ArrayList();
-		list.add("hello");
-		list.add("world");
-		list.add("java");
-		list.add(100);
-		
-        Iterator<String> iter = list.iterator();
-        while(iter.hasNext()){
-            String s = iter.next();
-            System.out.println(s);
-		}
+		Generic od = new Generic();
+		od.show("hello");    //hello
+		Generic<Integer> od2 = new Generic<Integer>();
+		od2.show(132);       //132
 	}
 }
 ```
 
-毫无疑问，程序的运行结果会以崩溃结束：
-
-```java
-java.lang.ClassCastException: java.lang.Integer cannot be cast to java.lang.String
-	at se01.day05.GenericDemo01.main(GenericDemo01.java:18)
-```
-
-ArrayList可以存放任意类型，例子中添加了一个String类型，添加了一个Integer类型，再使用时都以String的方式使用，因此程序崩溃了。为了解决类似这样的问题（在编译阶段就可以解决），泛型应运而生。
-
-我们将第一行声明初始化list的代码更改一下，编译器会在编译阶段就能够帮我们发现类似这样的问题。
-
-```java
-List<String> list = new ArrayList<String>();
-...
-//list.add(100); 在编译阶段，编译器就会报错
-```
-
- 实例2：
-
-```java
-//泛型类
-class ObjectDemo<E>{
-	private E e;
-	public void setE(E e){
-		this.e = e;
-	}
-	public E getE(){
-		return e;
-	}
-}
-
-//不使用泛型
-class ObjectDemo02{
-	private Object obj;
-
-	public Object getObj() {
-		return obj;
-	}
-	 
-	public void setObj(Object obj) {
-		this.obj = obj;
-	}
-
-}
-public class GenericDemo02 {
-	public static void main(String[] args) {
-		ObjectDemo<String> od = new ObjectDemo<String>();
-		od.setE("张伟");
-		System.out.println(od.getE());
-		
-
-		ObjectDemo<Integer> od2 = new ObjectDemo<Integer>();
-		od2.setE(12);
-		int i = od2.getE();
-		System.out.println(i);
-		
-		ObjectDemo02 obj = new ObjectDemo02();
-		obj.setObj("最低配");
-
-//		Integer inter =  (Integer) obj.getObj();//.ClassCastException
-//		System.out.println(inter);
-		
-	}
-
-}
-```
-
-由上可知，在不使用时我们会用到Object作为数据类型，在使用时再根据具体的情况向下转型还可能出现`java.lang.ClassCastException`异常，使用泛型后就避免了这种情况。
-
-### 泛型的使用
-
-#### 泛型类：定义在类上面
-
-格式：`public class 类名<泛型类型1,...>`
-
-* 例如：
-
-  ```java
-  //此处T可以随便写为任意标识，常见的如T、E、K、V等形式的参数常用于表示泛型
-  //在实例化泛型类时，必须指定T的具体类型
-  public class Generic<T,R>{     //一个类上可以定义多种泛型声明
-      //key这个成员变量的类型为T,T的类型由外部指定  
-      private T key;
-  
-      public Generic(T key) { //泛型构造方法形参key的类型也为T，T的类型由外部指定
-          this.key = key;
-      }
-       
-      public T getKey(){ //泛型方法getKey的返回值类型为T，T的类型由外部指定
-          return key;
-      }
-      public R fun(T p){  //R是返回值类型，T为方法参数类型
-          teturn null;    
-      }
-  
-  }
-  ```
-
-* 测试：
-
-  ```java
-  public class GenericTest{
-      public static void main(String[] args){
-         //泛型的类型参数只能是类类型（包括自定义类），不能是简单类型
-         //传入的实参类型需与泛型的类型参数类型相同，即为Integer.
-         Generic<Integer,String> genericInteger = new Generic<Integer,String>(123456);
-         //传入的实参类型需与泛型的类型参数类型相同，即为String.
-         Generic<String,Integer> genericString = new Generic<String,Integer>("key_vlaue");
-         System.out.println("泛型测试","key is " + genericInteger.getKey());
-         System.out.println("泛型测试","key is " + genericString.getKey());
-      }
-  }
-  ```
-
-* 输出结果：
-
-  ```html
-  <!--
-      泛型测试: key is 123456
-      泛型测试: key is key_vlaue
-  -->
-  ```
-
-**注意：泛型类的所有实例都具有相同的运行时类，而不管它们的实际类型参数如何。**
-
-* 实例：
-
-  ```java
-  List<String> l1 = new ArrayList<String>();
-  List<Integer> l2 = new ArrayList<Integer>();
-  System.out.println(l1.getClass()== l2.getClass());    //true
-  ```
-
-> 注意：
->
-> * 定义的泛型类，要么传入所有的泛型类型实参，要么不传入任何泛型类型实参。即:`Generic<Integer,String>...或Generic...`不能是`Generic<Integer>...`
-> * 泛型的类型参数只能是类类型，不能是简单类型。
-> * 不能对确切的泛型类型使用`instanceof`操作。如下操作是非法的，编译时会报错。`if(ex_num instanceof Generic<Number>){}`
-
-#### 泛型接口：定义在接口上面
+### 5.1.3 泛型接口
 
 格式：`public interface 接口名<泛型类型1,...>`
 
@@ -1011,110 +978,50 @@ public class GenericDemo02 {
 1. 在子类继续设置泛型标记
 2. 在子类不是设置泛型，而为接口明确定义一个泛型类型
 
-* 示例：
+```java
+// 泛型接口
+interface Inter<T>{
+	void show(T t);
+}
+```
 
-  ```java
-  //泛型接口
-  interface Inter<T>{
-  	void show(T t);
-  }
-  
-  //实现类
-  //1)知道实现什么泛型
-  class InterImpl implements Inter<String>{
-  	@Override
-  	public void show(String s) {
-  		System.out.println(s);
-  	}
-  }
-  //2)不知道实现什么泛型
-  class InterImpl02<T> implements Inter<T>{
-  	@Override
-  	public void show(T t) {
-  		System.out.println(t);
-  	}
-  }
-  
-  public class GenericDemo03 {
-  	public static void main(String[] args) {
-  		//1)
-  		InterImpl i = new InterImpl();
-  		i.show("hello");           // hello
-  		
-  
-  		//2)
-  		InterImpl02<String> i2 = new InterImpl02<String>();
-  		i2.show("world");          //world
-  		InterImpl02<Integer> i3 = new InterImpl02<Integer>();
-  		i3.show(13);               //13
-  	}    
-  
-  }
-  ```
+```java
+// 实现类
+// 1)知道实现什么泛型
+class InterImpl implements Inter<String>{
+	@Override
+	public void show(String s) {
+		System.out.println(s);
+	}
+}
+// 2)不知道实现什么泛型
+class InterImpl02<T> implements Inter<T>{
+	@Override
+	public void show(T t) {
+		System.out.println(t);
+	}
+}
+```
 
-> 注意：如果不声明泛型，如：`class InterImpl02 implements Inter<T>`，编译会报错`“Unknown class”`
+```java
+public class GenericDemo03 {
+	public static void main(String[] args) {
+		// 1)
+		InterImpl i = new InterImpl();
+		i.show("hello");           // hello
+		
+		// 2)
+		InterImpl02<String> i2 = new InterImpl02<String>();
+		i2.show("world");          //world
+		InterImpl02<Integer> i3 = new InterImpl02<Integer>();
+		i3.show(13);               //13
+	}    
+}
+```
 
-#### 泛型方法：定义在方法上
+如果不声明泛型，如：`class InterImpl02 implements Inter<T>`，编译会报错`“Unknown class”`
 
-格式：`修饰符 <泛型类型> 返回值类型 方法名(参数列表){}`
-
-注意：
-
-1. 泛型方法即在方法上设置泛型类型，参数中可以出现泛型类或类中未定义的泛型标识
-2. 在方法上定义泛型时，这个方法不一定要在泛型类中定义
-3. 泛型方法中可以出现任意多个泛型标识符
-4. 静态的泛型方法需要额外的泛型声明，即使使用了泛型类声明过的泛型类型
-5. 静态方法若有返回值其类型不能为泛型
-
-* 示例：
-
-  ```java
-  //泛型方法
-  class Generic<T>{//这个类是个泛型类，在上面已经介绍过
-  	private T key;
-  	
-  
-  	//这只是类中一个普通的成员方法，只不过他的返回值是在声明泛型类已经声明过的泛型。
-  	public T getKey(){
-  	    return key;
-  	    }
-  	/* 因为在类的声明中并未声明泛型K，所以在使用K做形参和返回值类型时，编译器会无法识别。
-  	 * K cannot be resolved to a type
-  	 * public K setKey(K key){	
-  	    this.key = key;
-  	}*/
-  	//在泛型类中声明了一个泛型方法，使用泛型T，注意这个T是一种全新的类型，可以与泛型类中声明的T不是同一种类型
-  	public <T> void show(T t){
-  		System.out.println(t);
-  	}
-  	public <E> T fun(E e){
-  		System.out.println(e);
-  		return key;
-  	}
-  	//泛型的数量也可以为任意多个 
-  	public <R,V> R showKeyName(R r,V v){
-  		return null;
-  	} 
-  	/*
-  	 * 如果在类中定义使用泛型的静态方法，需要添加额外的泛型声明（将这个方法定义成泛型方法）
-  	 * 即使静态方法要使用泛型类中已经声明过的泛型也不可以。
-  	 * 如：public static void method(T t){...},此时编译器会提示错误信息：
-  	 * Cannot make a static reference to the non-static type T
-  	 */
-  	public static <E> void method(E t){}
-  
-  }
-  public class GenericTest {
-  	public static void main(String[] args) {
-  		Generic od = new Generic();
-  		od.show("hello");    //hello
-  		Generic<Integer> od2 = new Generic<Integer>();
-  		od2.show(132);       //132
-  	}
-  }
-  ```
-
-### 通配符
+## 5.2 泛型通配符
 
 除了用 `<T>`表示泛型外，还有 `<?>`这种形式。`？` 被称为通配符。
 
@@ -1132,9 +1039,7 @@ List<Sub> lsub = new ArrayList<>();
 List<Base> lbase = lsub;
 ```
 
-最后一行代码成立吗？编译会通过吗？答案是**否定**的。
-
-编译器不会让它通过的。Sub 是 Base 的子类，不代表 List<Sub>和 List<Base>有继承关系。
+最后一行代码成立吗？编译会通过吗？答案是否定的。编译器不会让它通过的。Sub 是 Base 的子类，不代表 `List<Sub>`和 `List<Base>`有继承关系。
 
 但是，在现实编码中，确实有这样的需求，希望泛型能够处理某一范围内的数据类型，比如某个类和它的子类，对此 Java 引入了通配符这个概念。所以，**通配符的出现是为了指定泛型中的类型范围**。
 
@@ -1142,16 +1047,14 @@ List<Base> lbase = lsub;
 * `？ extends 类`：上边界限定通配符；
 * `? super 类`：下边界限定通配符；
 
-实例：
-
 ```java
-import java.util.ArrayList;
-import java.util.Collection;
-
 //通配符
 class Animal{}
 class Cat extends Animal{}
 class Dog extends Animal{}
+```
+
+```java
 public class GenericDemo05 {
 	public static void main(String[] args) {
 		//？ 任意类型
@@ -1159,25 +1062,23 @@ public class GenericDemo05 {
 		Collection<?> c2 = new ArrayList<Cat>();
 		Collection<?> c3 = new ArrayList<Dog>();
 		
-
-		//? extends E (向下限定)
+		//? extends E 
 		Collection<? extends Animal> c4 = new ArrayList<Cat>();
 		Collection<? extends Animal> c5 = new ArrayList<Dog>();
 		Collection<? extends Animal> c6 = new ArrayList<Animal>();
-
-//		Collection<? extends Animal> c4 = new ArrayList<Object>();
+         // 编译无法通过
+		// Collection<? extends Animal> c4 = new ArrayList<Object>();
 		
-
-		//? super E (向上限定)
+		//? super E
 		Collection<? super Animal> c7 = new ArrayList<Animal>();
 		Collection<? super Animal> c8 = new ArrayList<Object>();
-
-//		Collection<? super Animal> c7 = new ArrayList<Cat>();	
+        // 编译无法通过
+        // Collection<? super Animal> c7 = new ArrayList<Cat>();	
 	}
 }
 ```
 
-#### 无限定通配符
+### 5.2.1 无限定通配符
 
 无限定通配符经常与容器类配合使用，它其中的 `?` 其实代表的是未知类型，所以涉及到 `?` 时的操作，一定与具体类型无关。
 
@@ -1186,61 +1087,60 @@ public void testWildCards(Collection<?> collection){
 }
 ```
 
-上面的代码中，方法内的参数是被无限定通配符修饰的 `Collection` 对象，它隐略地表达了一个意图或者可以说是限定，那就是 `testWidlCards()` 这个方法内部无需关注 `Collection` 中的真实类型，因为它是未知的。所以，你只能调用 `Collection` 中与类型无关的方法。
+上面的代码中，方法内的参数是被无限定通配符修饰的 `Collection` 对象，它隐略地表达了一个意图或者可以说是限定，那就是 `testWidlCards()` 这个方法内部无需关注 `Collection` 中的真实类型，因为它是未知的。所以我们只能调用 `Collection` 中与类型无关的方法。
 
-![这里写图片描述](D:\Java\笔记\图片\Java版本\泛型)
+![](D:\Java\笔记\图片\1-00【Java基础】\11-0.png)
 
-我们可以看到，当 `<?>`存在时，`Collection` 对象丧失了 `add()` 方法的功能，编译器不通过。
-我们再看代码。
+我们可以看到，当 `<?>`存在时，`Collection` 对象丧失了 `add()` 方法的功能，编译器不通过。再看如下代码：
 
 ```java
-List<?> wildlist = new ArrayList<String>();
-wildlist.add(123);// 编译不通过
+List<?> list = new ArrayList<String>();
+list.add(123); // 编译不通过
 ```
 
-有人说，`<?>`提供了只读的功能，也就是它删减了增加具体类型元素的能力，只保留与具体类型无关的功能。它不管装载在这个容器内的元素是什么类型，它只关心元素的数量、容器是否为空？我想这种需求还是很常见的吧。
+`<?>`提供了只读的功能，也就是它删减了增加具体类型元素的能力，只保留与具体类型无关的功能。它不管装载在这个容器内的元素是什么类型，它只关心元素的数量、容器是否为空？我想这种需求还是很常见的吧。
 
-有同学可能会想，`<?>`既然作用这么渺小，那么为什么还要引用它呢？ 
+这样提高了代码的可读性，程序员看到这段代码时，就能够迅速对此建立极简洁的印象，能够快速推断源码作者的意图。
 
-个人认为，提高了代码的可读性，程序员看到这段代码时，就能够迅速对此建立极简洁的印象，能够快速推断源码作者的意图。
+### 5.2.2 上边界限定通配符
 
-#### extends 上边界限定通配符
+上边界限定通配符：`？ extends 类`。最上面只能是该类。
+
+上界`<? extends T>`不能往里存，只能往外取
 
 ```java
 public class GenericsAndCovariance {
     public static void main(String[] args) {
         // Wildcards allow covariance:
-        List<? extends Fruit> flist = new ArrayList<Apple>();
+        List<? extends Fruit> list = new ArrayList<Apple>();
         // Compile Error: can’t add any type of object:
-        // flist.add(new Apple());
-        // flist.add(new Fruit());
-        // flist.add(new Object());
-        flist.add(null); // Legal but uninteresting
+        // list.add(new Apple());
+        // list.add(new Fruit());
+        // list.add(new Object());
+        list.add(null); // Legal but uninteresting
         // We know that it returns at least Fruit:
-        Fruit f = flist.get(0);
+        Fruit f = list.get(0);
     }
 }
 ```
 
-上面的例子中， `flist` 的类型是 `List<? extends Fruit>`，我们可以把它读作：一个类型的 List， 这个类型可以是继承了 `Fruit` 的某种类型。注意，**这并不是说这个 List 可以持有** `Fruit` **的任意类型**。通配符代表了一种特定的类型，它表示 “某种特定的类型，但是 `flist` 没有指定”。这样不太好理解，具体针对这个例子解释就是，`flist` 引用可以指向某个类型的 List，只要这个类型继承自 `Fruit`，可以是 `Fruit` 或者 `Apple`，比如例子中的 `new ArrayList<Apple>`，但是为了向上转型给 `flist`，`flist` 并不关心这个具体类型是什么。
+如上所述，通配符 `List<? extends Fruit>` 表示某种特定类型 ( `Fruit` 或者其子类 ) 的 List，但是并不关心这个实际的类型到底是什么，反正是 `Fruit` 的子类型，`Fruit` 是它的上边界。
 
-如上所述，通配符 `List<? extends Fruit>` 表示某种特定类型 ( `Fruit` 或者其子类 ) 的 List，但是并不关心这个实际的类型到底是什么，反正是 `Fruit` 的子类型，`Fruit` 是它的上边界。那么对这样的一个 List 我们能做什么呢？其实如果我们不知道这个 List 到底持有什么类型，怎么可能安全的添加一个对象呢？在上面的代码中，向 `flist` 中添加任何对象，无论是 `Apple` 还是 `Orange` 甚至是 `Fruit` 对象，编译器都不允许，唯一可以添加的是 `null`。所以如果做了泛型的向上转型 (`List<? extends Fruit> flist = new ArrayList<Apple>()`)，那么我们也就失去了向这个 List 添加任何对象的能力，即使是 `Object` 也不行。
+其实如果我们不知道这个 List 到底持有什么类型，怎么可能安全的添加一个对象呢？在上面的代码中，向 `list` 中添加任何对象，无论是 `Apple` 还是 `Orange` 甚至是 `Fruit` 对象，编译器都不允许，唯一可以添加的是 `null`。所以如果做了泛型的向上转型 (`List<? extends Fruit> list = new ArrayList<Apple>()`)，那么我们也就失去了向这个 List 添加任何对象的能力，即使是 `Object` 也不行。
 
 另一方面，如果调用某个返回 `Fruit` 的方法，这是安全的。因为我们知道，在这个 List 中，不管它实际的类型到底是什么，但肯定能转型为 `Fruit`，所以编译器允许返回 `Fruit`。
 
-了解了通配符的作用和限制后，好像任何接受参数的方法我们都不能调用了。其实倒也不是，看下面的例子：
+了通配符的作用和限制后，好像任何接受参数的方法我们都不能调用了。其实倒也不是，看下面的例子：
 
 ```java
 public class CompilerIntelligence {
     public static void main(String[] args) {
-        List<? extends Fruit> flist =
-        Arrays.asList(new Apple());
+        List<? extends Fruit> flist = Arrays.asList(new Apple());
         Apple a = (Apple)flist.get(0); // No warning
         flist.contains(new Apple()); // Argument is ‘Object’
         flist.indexOf(new Apple()); // Argument is ‘Object’
         
-        //flist.add(new Apple());   无法编译
-
+        // flist.add(new Apple());   无法编译
     }
 }
 ```
@@ -1253,7 +1153,6 @@ public class CompilerIntelligence {
 public boolean add(E e)
 public boolean contains(Object o)
 public int indexOf(Object o)
-
 ```
 
 所以如果我们指定泛型参数为 `<? extends Fruit>` 时，`add()` 方法的参数变为 `? extends Fruit`，编译器无法判断这个参数接受的到底是 `Fruit` 的哪种类型，所以它不会接受任何类型。
@@ -1271,7 +1170,7 @@ public class Holder<T> {
     public void set(T val) { value = val; }
     public T get() { return value; }
     public boolean equals(Object obj) {
-    return value.equals(obj);
+    	return value.equals(obj);
     }
     
     public static void main(String[] args) {
@@ -1287,10 +1186,12 @@ public class Holder<T> {
         
         try {
             Orange c = (Orange)fruit.get(); // No warning
-        } catch(Exception e) { System.out.println(e); }
+        } catch(Exception e) { 
+            System.out.println(e); 
+        }
+        
         // fruit.set(new Apple()); // Cannot call set()
         // fruit.set(new Fruit()); // Cannot call set()
-        
         System.out.println(fruit.equals(d)); // OK
     }
 } 
@@ -1303,9 +1204,13 @@ true
 
 在 `Holer` 类中，`set()` 方法接受类型参数 `T` 的对象作为参数，`get()` 返回一个 `T` 类型，而 `equals()` 接受一个 `Object` 作为参数。`fruit` 的类型是 `Holder<? extends Fruit>`，所以`set()`方法不会接受任何对象的添加，但是 `equals()` 可以正常工作。
 
-#### 下边界限定通配符
+### 5.2.3 下边界限定通配符
 
-通配符的另一个方向是　“超类型的通配符“: `? super T`，`T` 是类型参数的下界。使用这种形式的通配符，我们就可以 ”传递对象” 了。还是用例子解释：
+通配符的另一个方向是“超类型的通配符“: `? super T`，`T` 是类型参数的下界。使用这种形式的通配符，我们就可以 ”传递对象” 了。
+
+`List<? super T>`因为存的都是类型T的父类，所以如果去添加T类或者T类子类的元素，肯定是可以的。但是如果将元素取出来，则不知道到底是什么类型，所以`? super T`可以添加元素但是没法取出来，这个叫put原则。
+
+还是用例子解释：
 
 ```java
 public class SuperTypeWildcards {
@@ -1323,23 +1228,16 @@ public class SuperTypeWildcards {
 
 ```java
 public class Collections { 
-  public static <T> void copy(List<? super T> dest, List<? extends T> src) 
-  {
-      for (int i=0; i<src.size(); i++) 
-        dest.set(i,src.get(i)); 
-  } 
+    public static <T> void copy(List<? super T> dest, List<? extends T> src) {
+        for (int i = 0; i < src.size(); i++) 
+            dest.set(i,src.get(i)); 
+    } 
 }
 ```
 
 `src` 是原始数据的 List，因为要从这里面读取数据，所以用了上边界限定通配符：`<? extends T>`，取出的元素转型为 `T`。`dest` 是要写入的目标 List，所以用了下边界限定通配符：`<? super T>`，可以写入的元素类型是 `T` 及其子类型。
 
-### Java类型擦除机制
-
-泛型是 Java 1.5 版本才引进的概念，在这之前是没有泛型的概念的，但显然，泛型代码能够很好地和之前版本的代码很好地兼容。
-
-这是因为，**泛型信息只存在于代码编译阶段，在进入 JVM 之前，与泛型相关的信息会被擦除掉，专业术语叫做类型擦除。**
-
-通俗地讲，泛型类和普通类在 java 虚拟机内是没有什么特别的地方。回顾文章开始时的那段代码
+## 5.3 类型擦除
 
 ```java
 List<String> l1 = new ArrayList<String>();
@@ -1348,11 +1246,13 @@ List<Integer> l2 = new ArrayList<Integer>();
 System.out.println(l1.getClass() == l2.getClass());
 ```
 
-打印的结果为 true 是因为 `List<String>`和 `List<Integer>`在 jvm 中的 Class 都是 List.class。
+正确答案是 true。上面的代码中涉及到了泛型，而输出的结果缘由是**类型擦除**。泛型信息只存在于代码编译阶段，在进入 JVM 之前，与泛型相关的信息会被擦除掉，专业术语叫做类型擦除。通俗地讲，泛型类和普通类在 java 虚拟机内是没有什么特别的地方。
 
-泛型信息被擦除了。
+打印的结果为 true 是因为 `List<String>`和 `List<Integer>`在 jvm 中的 Class 都是 List.class，泛型信息被擦除了。而类型 String 和 Integer之间就发生了泛型转译。
 
-可能同学会问，那么类型 String 和 Integer 怎么办？答案是泛型转译。
+### 5.3.1 反射研究类型擦除
+
+我们可以通过反射来看一下，Erasure 是一个泛型类，我们查看它在运行时的状态信息可以通过反射：
 
 ```java
 public class Erasure <T>{
@@ -1361,44 +1261,27 @@ public class Erasure <T>{
 	public Erasure(T object) {
 		this.object = object;
 	}
-
 }
 ```
-
-Erasure 是一个泛型类，我们查看它在运行时的状态信息可以通过反射。
 
 ```java
 Erasure<String> erasure = new Erasure<String>("hello");
-Class eclz = erasure.getClass();
-System.out.println("erasure class is:"+eclz.getName());
+Class clazz = erasure.getClass();
+System.out.println("erasure class is:" + clazz.getName());
+// 打印结果：erasure class is:com.linxuan.demo01.Erasure
 ```
 
-打印的结果是
+Class 的类型仍然是 Erasure 并不是 `Erasure<T>`这种形式，那我们再看看泛型类中 `T` 的类型在 `jvm` 中是什么具体类型：
 
 ```java
-erasure class is:com.frank.test.Erasure
-```
-
-Class 的类型仍然是 Erasure 并不是 `Erasure<T>`这种形式，那我们再看看泛型类中 `T` 的类型在 `jvm` 中是什么具体类型。
-
-```java
-Field[] fs = eclz.getDeclaredFields();
-for ( Field f:fs) {
-	System.out.println("Field name "+f.getName()+" type:"+f.getType().getName());
+Field[] fs = clazz.getDeclaredFields();
+for (Field f : fs) {
+    // 打印结果为：Field name object type:java.lang.Object
+	System.out.println("Field name " + f.getName() + " type:" + f.getType().getName());
 }
 ```
 
-打印结果是
-
-```java
-Field name object type:java.lang.Object
-```
-
-那我们可不可以说，泛型类被类型擦除后，相应的类型就被替换成 Object 类型呢？
-
-这种说法，不完全正确。
-
-我们更改一下代码。
+那我们可不可以说，泛型类被类型擦除后，相应的类型就被替换成 Object 类型呢？这种说法，不完全正确。我们更改一下代码。
 
 ```java
 public class Erasure <T extends String>{
@@ -1408,19 +1291,14 @@ public class Erasure <T extends String>{
 	public Erasure(T object) {
 		this.object = object;
 	}
-
 }
 ```
 
-现在再看测试结果：
-
-```java
-Field name object type:java.lang.String
-```
+现在再看测试结果：`Field name object type:java.lang.String`
 
 我们现在可以下结论了，在泛型类被类型擦除的时候，之前泛型类中的类型参数部分如果没有指定上限，如 `<T>`则会被转译成普通的 Object 类型，如果指定了上限如 `<T extends String>`则类型参数就被替换成类型上限。
 
-所以，在反射中。
+所以在反射中，下面的代码中的`add()` 这个方法对应的 Method 的签名应该是 `Object.class`。
 
 ```java
 public class Erasure <T>{
@@ -1431,51 +1309,40 @@ public class Erasure <T>{
 	}
 	
 	public void add(T object){
-		
 	}
-	
 }
 ```
 
-add() 这个方法对应的 Method 的签名应该是 Object.class。
-
 ```java
 Erasure<String> erasure = new Erasure<String>("hello");
-Class eclz = erasure.getClass();
-System.out.println("erasure class is:"+eclz.getName());
+Class clazz = erasure.getClass();
+System.out.println("erasure class is:" + clazz.getName());
 
-Method[] methods = eclz.getDeclaredMethods();
+Method[] methods = clazz.getDeclaredMethods();
 for ( Method m:methods ){
+     // 打印结果为： method:public void com.frank.test.Erasure.add(java.lang.Object)
 	System.out.println(" method:"+m.toString());
 }
 ```
 
-打印结果是
+也就是说，如果要在反射中找到 add 对应的 Method，应该调用 `getDeclaredMethod("add",Object.class)`否则程序会报错，提示没有这么一个方法，原因就是类型擦除的时候，T 被替换成 Object 类型了。
 
-```java
- method:public void com.frank.test.Erasure.add(java.lang.Object)
-```
-
-也就是说，如果你要在反射中找到 add 对应的 Method，你应该调用 `getDeclaredMethod("add",Object.class)`否则程序会报错，提示没有这么一个方法，原因就是类型擦除的时候，T 被替换成 Object 类型了。
-
-#### 类型擦除带来的局限性
+### 5.3.2 类型擦除局限性
 
 类型擦除，是泛型能够与之前的 java 版本代码兼容共存的原因。但也因为类型擦除，它会抹掉很多继承相关的特性，这是它带来的局限性。
 
-理解类型擦除有利于我们绕过开发当中可能遇到的雷区，同样理解类型擦除也能让我们绕过泛型本身的一些限制。比如
+理解类型擦除有利于我们绕过开发当中可能遇到的雷区，同样理解类型擦除也能让我们绕过泛型本身的一些限制。比如下面的代码：
 
-![这里写图片描述](D:\Java\笔记\图片\Java版本\类型擦除局限性)
+![](D:\Java\笔记\图片\1-00【Java基础】\11-1.png)
 
 正常情况下，因为泛型的限制，编译器不让最后一行代码编译通过，因为类似不匹配，但是，基于对类型擦除的了解，利用反射，我们可以绕过这个限制。
 
 ```java
+// List接口和其中的 add() 方法的源码
 public interface List<E> extends Collection<E>{
-	
 	 boolean add(E e);
 }
 ```
-
-上面是 List 和其中的 add() 方法的源码定义。
 
 因为 E 代表任意的类型，所以类型擦除时，add 方法其实等同于
 
@@ -1486,36 +1353,19 @@ boolean add(Object obj);
 那么，利用反射，我们绕过编译器去调用 add 方法。
 
 ```java
-public class ToolTest {
+public class Demo01 {
+    public static void main(String[] args) throws Exception {
+		List<Integer> list = new ArrayList<>();
+		list.add(123);
+		// 编译无法通过
+		// list.add("test");
 
-	public static void main(String[] args) {
-		List<Integer> ls = new ArrayList<>();
-		ls.add(23);
-//		ls.add("text");
-		try {
-			Method method = ls.getClass().getDeclaredMethod("add",Object.class);
-			
-			
-			method.invoke(ls,"test");
-			method.invoke(ls,42.9f);
-		} catch (NoSuchMethodException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (SecurityException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalArgumentException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (InvocationTargetException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		
-		for ( Object o: ls){
+		Class<? extends List> clazz = list.getClass();
+		Method method = clazz.getDeclaredMethod("add", Object.class);
+		method.invoke(list, "test");
+		method.invoke(list, 42.9f);
+
+		for (Object o : list){
 			System.out.println(o);
 		}
 	}
@@ -1534,12 +1384,15 @@ public class ToolTest {
 
 可以看到，利用类型擦除的原理，用反射的手段就绕过了正常开发中编译器不允许的操作限制。
 
-### 泛型与数组
+## 5.4 泛型与数组
 
-关于泛型数组的理解真的有点令人恼火（annoying）下面内容看看就行。在The Java™ Tutorials: Generics中讲到了泛型数组，并说道：除非使用通配符，否则一个数组对象的元素不能是泛型。即：在java中是”不能创建一个确切的泛型类型的数组”的。也就是说下面的这个例子是不可以的：
+> 简单看看
+
+在The Java™ Tutorials: Generics中讲到了泛型数组，并说道：除非使用通配符，否则一个数组对象的元素不能是泛型。即：在java中是”不能创建一个确切的泛型类型的数组”的。也就是说下面的这个例子是不可以的：
 
 ```java
-List<String>[] ls = new ArrayList<String>[10];//Cannot create a generic array of ArrayList<String>
+// Cannot create a generic array of ArrayList<String>
+List<String>[] ls = new ArrayList<String>[10];
 ```
 
  而使用通配符创建泛型数组是可以的，如下面这个例子：
@@ -1566,7 +1419,7 @@ oa[1] = li;
 String s = lsa[1].get(0);                      //2
 ```
 
- 如果允许泛型数组的存在（第1处代码编译通过），那么在第2处代码就会报出ClassCastException，因为lsa[1]是List<Integer>。Java设计者本着首要保证类型安全（type-safety）的原则，不允许泛型数组的存在，使得编译期就可以检查到这类错误。
+如果允许泛型数组的存在（第1处代码编译通过），那么在第2处代码就会报出`ClassCastException`，因为lsa[1]是List<Integer>。Java设计者本着首要保证类型安全（type-safety）的原则，不允许泛型数组的存在，使得编译期就可以检查到这类错误。
 
 解决方案
 
@@ -1620,10 +1473,9 @@ private T[] arr;
 <T> T[] makeArray(T t) {
     return new T[100]; // Error.
 }
-
 ```
 
-## 8. for-each循环
+# 第六章 for-each循环
 
 foreach 语法格式如下：
 
