--- a/5-扩展/5-02【算法2】.md
+++ b/5-扩展/5-02【算法2】.md
@@ -584,6 +584,14 @@ if (strs == null || strs.length == 0) {
 }
 ```
 
+## List集合
+
+返回一个空的list集合
+
+```java
+return Arrays.asList(); 
+```
+
 
 
 ## 算数溢出
@@ -684,7 +692,7 @@ int mid2 = left + ((right - left) >> 1);
 * i++是先赋值，然后再自增；++i是先自增，后赋值。
 
 ```java
-return left++;	// 编译器会报警告，提示这个式子根本没有任何作用。确实这个语句的意思是返回之后再加一，可是已经返回了，不会再用这个方法了。
+return left++;	// 编译器会报警告，提示这个式子根本没有任何作用。这个语句的意思是返回之后再加一，可是已经返回了，不会再用这个方法了。
 return ++left;  // 返回前自增再返回。
 
 nums[++left]	// 自增之后查询nums下标为left的值
